--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 10:38+0200\n"
+"POT-Creation-Date: 2024-06-08 12:57+0200\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -657,11 +657,11 @@ msgstr "Externe ID des Gegenentwurfs/Gegenvorschlags"
 msgid "External ID of tie breaker"
 msgstr "Externe ID der Stichfrage"
 
-msgid "Direct Counter-Proposal"
-msgstr "Direkter Gegenentwurf"
+msgid "Direct (Counter Proposal)"
+msgstr "Direkt (Gegenentwurf)"
 
-msgid "Indirect Counter-Proposal"
-msgstr "Indirekter Gegenvorschlag"
+msgid "Indirect (Counter Proposal)"
+msgstr "Indirekt (Gegenvorschlag)"
 
 msgid "Display as tie-breaker"
 msgstr "Als Stichfrage darstellen"
