--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 10:38+0200\n"
+"POT-Creation-Date: 2024-06-08 12:57+0200\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -657,11 +657,11 @@ msgstr "ID externe du contre-projet"
 msgid "External ID of tie breaker"
 msgstr "ID externe du jeu décisif"
 
-msgid "Direct Counter-Proposal"
-msgstr "Contre-projet direct"
+msgid "Direct (Counter Proposal)"
+msgstr "Direct"
 
-msgid "Indirect Counter-Proposal"
-msgstr "Contre-projet indirect"
+msgid "Indirect (Counter Proposal)"
+msgstr "Indirect"
 
 msgid "Display as tie-breaker"
 msgstr "Afficher comme une question subsidiaire"
