--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 10:38+0200\n"
+"POT-Creation-Date: 2024-06-08 12:57+0200\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -652,11 +652,11 @@ msgstr "ID esterno del controprogetto"
 msgid "External ID of tie breaker"
 msgstr "ID esterno della domanda risolutiva"
 
-msgid "Direct Counter-Proposal"
-msgstr "Controprogetto diretto"
+msgid "Direct (Counter Proposal)"
+msgstr "Diretto"
 
-msgid "Indirect Counter-Proposal"
-msgstr "Controprogetto indiretto"
+msgid "Indirect (Counter Proposal)"
+msgstr "Indiretto"
 
 msgid "Display as tie-breaker"
 msgstr "Visualizzare come domanda risolutiva"
