--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-08 10:38+0200\n"
+"POT-Creation-Date: 2024-06-08 12:57+0200\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -663,11 +663,11 @@ msgstr "ID externa da la cuntraproposta"
 msgid "External ID of tie breaker"
 msgstr "ID externa da la dumonda decisiva"
 
-msgid "Direct Counter-Proposal"
-msgstr "Cuntraproposta directa"
+msgid "Direct (Counter Proposal)"
+msgstr "Directa"
 
-msgid "Indirect Counter-Proposal"
-msgstr "Cuntraproposta indirecta"
+msgid "Indirect (Counter Proposal)"
+msgstr "Indirecta"
 
 msgid "Display as tie-breaker"
 msgstr "Mussar sco dumonda decisiva"
