--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-04-30 08:47+0200\n"
+"POT-Creation-Date: 2024-05-29 12:55+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -500,6 +500,16 @@ msgstr ""
 msgid "Publication"
 msgstr "Pubblicazione"
 
+msgid "Enable registering for update notifications"
+msgstr "Attivare la registrazione per le notifiche"
+
+msgid "Users can register for updates on new entries"
+msgstr ""
+"Gli utenti possono registrarsi per ricevere notifiche di nuovi inserimenti"
+
+msgid "Notifications"
+msgstr "Notifiche"
+
 msgid "Required publication dates"
 msgstr "Date di pubblicazione obbligatorie"
 
@@ -569,6 +579,9 @@ msgstr "Nome non valido. Un suggerimento valido è: ${name}"
 
 msgid "An entry with the same name exists"
 msgstr "Esiste già un elemento con lo stesso nome"
+
+msgid "E-Mail"
+msgstr "E-mail"
 
 msgid "Art"
 msgstr "Arte"
@@ -797,9 +810,6 @@ msgstr "La prima riga deve avere i seguenti nomi di colonna:"
 msgid "Map"
 msgstr "Mappa"
 
-msgid "E-Mail"
-msgstr "E-mail"
-
 msgid "Comment"
 msgstr "Commento"
 
@@ -1022,8 +1032,8 @@ msgid ""
 "If checked, news are displayed as tiles. Otherwise, news are listed in full "
 "length."
 msgstr ""
-"Se questa opzione è attivata, i notizie vengono visualizzati come "
-"tessere. Altrimenti, i notizie sono elencati per intero."
+"Se questa opzione è attivata, i notizie vengono visualizzati come tessere. "
+"Altrimenti, i notizie sono elencati per intero."
 
 msgid "Events"
 msgstr "Eventi"
@@ -1890,6 +1900,14 @@ msgstr "Invia il tuo evento"
 msgid "Enables website visitors to submit their own events"
 msgstr "Consente ai visitatori del sito web di presentare i propri eventi"
 
+msgid "Delete events in the past"
+msgstr "Cancellare gli eventi del passato"
+
+msgid "Events are automatically deleted once they have occurred"
+msgstr ""
+"Gli eventi vengono cancellati automaticamente una volta che si sono "
+"verificati"
+
 msgid "Duration from opening a ticket to its automatic archival"
 msgstr "Durata dall'apertura di un ticket alla sua archiviazione automatica"
 
@@ -2253,11 +2271,11 @@ msgstr "Nuova risorsa esterna"
 msgid "Export All"
 msgstr "Esporta tutte"
 
+msgid "iFrame"
+msgstr "iFrame"
+
 msgid "Find Your Spot"
 msgstr "Cerca le date"
-
-msgid "Notifications"
-msgstr "Notifiche"
 
 msgid "E-Mail Recipient"
 msgstr "E-mail del destinatario"
@@ -2551,13 +2569,10 @@ msgstr "Collegamenti della barra laterale"
 msgid "Delete content when expired"
 msgstr ""
 
-msgid ""
-"This content is automatically deleted when the end date has passed. If no "
-"end date is set, it will be deleted one day after start date."
+msgid "This content is automatically deleted if the end date is in the past"
 msgstr ""
 "Questo contenuto viene eliminato automaticamente quando la data di fine è "
-"passata. Se non è stata impostata una data di fine, verrà eliminato un "
-"giorno dopo la data di inizio."
+"passata"
 
 msgid "Delete content"
 msgstr "Cancellare il contenuto"
@@ -2841,9 +2856,6 @@ msgstr "Elimina notizie"
 msgid "Do you really want to delete the news \"${title}\"?"
 msgstr "Desideri davvero eliminare la notizia \"${title}\"?"
 
-msgid "iFrame"
-msgstr "iFrame"
-
 msgid "Add iFrame"
 msgstr "Aggiungere iFrame"
 
@@ -2969,6 +2981,12 @@ msgstr "Proponi un elemento"
 msgid "Something missing? Propose a new entry."
 msgstr "Manca qualcosa? Proponi un nuovo elemento."
 
+msgid "Actions"
+msgstr "Azioni"
+
+msgid "Get notifications on new entries"
+msgstr "Ricevi notifiche su nuovi elementi"
+
 msgid "External link"
 msgstr "Collegamento esterno"
 
@@ -3029,6 +3047,13 @@ msgstr "Conferma"
 
 msgid "There was an error while importing your directory!"
 msgstr "Si è verificato un errore durante l'importazione della cartella!"
+
+msgid "Embed iFrame"
+msgstr "Incorpora iFrame"
+
+msgid "You can copy the following code to embed this page as an iFrame:"
+msgstr ""
+"Puoi copiare il seguente codice per incorporare questa pagina come iFrame:"
 
 msgid ""
 "Please review your data and press \"Complete\" to finalize the process. If "
@@ -3503,6 +3528,20 @@ msgstr ""
 msgid "Click here to unsubscribe."
 msgstr "Clicca qui per annullare l'iscrizione."
 
+msgid ""
+"You are recieving this mail because you subscribed to getting notifications "
+"on new entries in the following directory:"
+msgstr ""
+"Ricevi questa mail perché ti sei iscritto a ricevere notifiche su nuovi "
+"elementi nella seguente cartella:"
+
+msgid ""
+"If you did not subscribe to this notifications you can simply ignore this e-"
+"mail."
+msgstr ""
+"Se non ti sei iscritto a queste notifiche puoi semplicemente ignorare questa "
+"e-mail."
+
 msgid "Good morning,"
 msgstr "Buongiorno,"
 
@@ -3652,6 +3691,13 @@ msgstr ""
 
 msgid "Or by changing the settings in your user profile."
 msgstr "Oppure modificando le impostazioni nel tuo profilo utente."
+
+msgid "A new entry has been added to the \"${directory.title}\" directory:"
+msgstr "Un nuovo elemento è stato aggiunto alla cartella "
+"\"${directory.title}\":"
+
+msgid "Do you no longer wish to receive these notifications?"
+msgstr "Non desideri più ricevere queste notifiche?"
 
 msgid "The following reservations have been accepted:"
 msgstr "Sono state accettate le seguenti prenotazioni:"
@@ -4659,6 +4705,10 @@ msgstr ""
 "Gli URL stabili sono importanti. Qui puoi modificare il percorso del tuo "
 "sito indipendentemente dal titolo."
 
+#, python-format
+msgid "${org}: New Entry in \"${directory}\""
+msgstr "${org}: Nuovo elemento in \"${directory}\""
+
 msgid "Added a new directory entry"
 msgstr "Aggiunta un nuovo elemento della cartella"
 
@@ -4736,6 +4786,48 @@ msgstr ""
 "forniti nel file ZIP. Il formato è lo stesso generato dalla funzione di "
 "esportazione. Tieni presente che vengono importati solo 100 elementi alla "
 "volta. Per importare più elementi, ripeti l'importazione finché necessario."
+
+msgid "New Recipient"
+msgstr "Nuovo destinatario"
+
+#, python-format
+msgid ""
+"Registration for notifications on new entries in the directory "
+"\"${directory}\""
+msgstr ""
+"Registrazione per le notifiche sui nuovi elementi nella cartella "
+"\"${directory}\""
+
+#, python-format
+msgid ""
+"Success! We have sent a confirmation link to ${address}, if we didn't send "
+"you one already."
+msgstr ""
+"La richiesta ha avuto esito positivo! Abbiamo inviato un collegamento di "
+"conferma a ${address}, se non te ne abbiamo già inviato uno."
+
+msgid "Notification for new entries"
+msgstr "Notifica per nuovi elementi"
+
+msgid "Recipients of new entry updates"
+msgstr "Destinatari degli aggiornamenti dei nuovi elementi"
+
+#, python-format
+msgid "the subscription for ${address} was successfully confirmed"
+msgstr "l'abbonamento di ${address} è stato correttamente confermato"
+
+#, python-format
+msgid "the subscription for ${address} could not be confirmed, wrong token"
+msgstr ""
+"non è stato possibile confermare l'abbonamento di ${address}, token errato"
+
+#, python-format
+msgid "${address} successfully unsubscribed"
+msgstr "Iscrizione di ${address} annullata correttamente"
+
+#, python-format
+msgid "${address} could not be unsubscribed, wrong token"
+msgstr "Impossibile annullare l'iscrizione di ${address}, token errato"
 
 msgid "Moves the topic and all its sub topics to the given destination."
 msgstr ""
@@ -5029,14 +5121,6 @@ msgstr "Nuovo album fotografico"
 #, python-format
 msgid "Welcome to the ${org} Newsletter"
 msgstr "Benvenuto nella newsletter di ${org}"
-
-#, python-format
-msgid ""
-"Success! We have sent a confirmation link to ${address}, if we didn't send "
-"you one already."
-msgstr ""
-"La richiesta ha avuto esito positivo! Abbiamo inviato un collegamento di "
-"conferma a ${address}, se non te ne abbiamo già inviato uno."
 
 #, python-format
 msgid "Do you really want to unsubscribe \"{}\"?"
@@ -5382,9 +5466,6 @@ msgstr "Elimina destinatario"
 msgid "Added a new recipient"
 msgstr "Aggiunto un nuovo destinatario"
 
-msgid "New Recipient"
-msgstr "Nuovo destinatario"
-
 msgid "Edit Recipient"
 msgstr "Modifica il destinatario"
 
@@ -5468,23 +5549,6 @@ msgstr "Chat"
 
 msgid "Topics"
 msgstr "Argomenti"
-
-#, python-format
-msgid "the subscription for ${address} was successfully confirmed"
-msgstr "l'abbonamento di ${address} è stato correttamente confermato"
-
-#, python-format
-msgid "the subscription for ${address} could not be confirmed, wrong token"
-msgstr ""
-"non è stato possibile confermare l'abbonamento di ${address}, token errato"
-
-#, python-format
-msgid "${address} successfully unsubscribed"
-msgstr "Iscrizione di ${address} annullata correttamente"
-
-#, python-format
-msgid "${address} could not be unsubscribed, wrong token"
-msgstr "Impossibile annullare l'iscrizione di ${address}, token errato"
 
 msgid "Added a new text module"
 msgstr "Aggiunto un nuovo modulo di testo"
@@ -5703,6 +5767,47 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid "New entry in directory"
+#~ msgstr "Nuovo elemento nella cartella"
+
+#~ msgid "has a new entry:"
+#~ msgstr "ha un nuovo elemento:"
+
+#, python-format
+#~ msgid ""
+#~ "Registration for notifications on updates in the directory "
+#~ "\"${directory}\""
+#~ msgstr ""
+#~ "Registrazione per le notifiche sugli aggiornamenti nella cartella "
+#~ "\"${directory}\""
+
+#~ msgid "The following entry have been added to the directory"
+#~ msgstr "I seguenti elementi sono stati aggiunti alla cartella"
+
+#~ msgid ""
+#~ "This is a notification for the new entries in \"${organisation}\". If you "
+#~ "no longer wish to receive these notifications, please contact an "
+#~ "administrator so they can remove you from the recipients list."
+#~ msgstr ""
+#~ "Questa è una notifica per i nuovi elementi in \"${organization}\". Se non "
+#~ "desideri più ricevere queste notifiche, contatta un amministratore in "
+#~ "modo che possa rimuoverti dall'elenco dei destinatari."
+
+#, python-format
+#~ msgid "${org} New Entry in ${directory}"
+#~ msgstr "Nuovo elemento in ${directory} di ${org}"
+
+#~ msgid "The email adress has been added to the recipients"
+#~ msgstr "L'indirizzo e-mail è stato aggiunto ai destinatari"
+
+#~ msgid ""
+#~ "This content is automatically deleted when the end date has passed. If no "
+#~ "end date is set, it will be deleted one day after start date."
+#~ msgstr ""
+#~ "Questo contenuto viene eliminato automaticamente quando la data di fine è "
+#~ "passata. Se non è stata impostata una data di fine, verrà eliminato un "
+#~ "giorno dopo la data di inizio."
 
 #~ msgid ""
 #~ "There are currently no allowed domains for iframes. To enable domains for "
