--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2570,6 +2570,9 @@ msgstr ""
 msgid "Delete content"
 msgstr "Supprimer le contenu"
 
+msgid "In future"
+msgstr ""
+
 msgid "This month"
 msgstr "Ce mois-ci"
 
