Adds translations for French and Italian

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2571,7 +2571,7 @@ msgid "Delete content"
 msgstr "Supprimer le contenu"
 
 msgid "In future"
-msgstr ""
+msgstr "Dans le futur"
 
 msgid "This month"
 msgstr "Ce mois-ci"
