--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2578,7 +2578,7 @@ msgid "Delete content"
 msgstr "Cancellare il contenuto"
 
 msgid "In future"
-msgstr ""
+msgstr "in futuro"
 
 msgid "This month"
 msgstr "Questo mese"
