Fix and improve translation

--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -511,6 +511,9 @@ msgstr "Extension"
 msgid "Upload Date"
 msgstr "Date de téléchargement"
 
+msgid "Published until"
+msgstr "Publié jusqu'à"
+
 msgid "All Files"
 msgstr "Tous les fichiers"
 
