--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -513,6 +513,9 @@ msgstr "Erweiterung"
 msgid "Upload Date"
 msgstr "Hochlade-Datum"
 
+msgid "Published until"
+msgstr "Publiziert bis"
+
 msgid "All Files"
 msgstr "Alle Dateien"
 
