Files: Adds 'published until' column to file view
TYPE: Feature
LINK: ogc-1696

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2572,6 +2572,9 @@ msgstr ""
 msgid "Delete content"
 msgstr "Inhalt löschen"
 
+msgid "In future"
+msgstr "In Zukunft"
+
 msgid "This month"
 msgstr "Diesen Monat"
 
