--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2579,6 +2579,9 @@ msgstr ""
 msgid "Delete content"
 msgstr "Supprimer le contenu"
 
+msgid "In future"
+msgstr "Dans le futur"
+
 msgid "This month"
 msgstr "Ce mois-ci"
 
