Newsletter: Render a message if no subscribers yet

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2358,6 +2358,9 @@ msgstr "Neu"
 msgid "Subscribers"
 msgstr "Abonnenten"
 
+msgid "No subscribers yet"
+msgstr "Noch keine Abonnenten"
+
 msgid "Test"
 msgstr "Test"
 
