--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2361,6 +2361,9 @@ msgstr "Nouveau"
 msgid "Subscribers"
 msgstr "Abonnés"
 
+msgid "No subscribers yet"
+msgstr "Pas encore d'abonnés"
+
 msgid "Test"
 msgstr "Test"
 
