--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2368,6 +2368,9 @@ msgstr "Nuovo"
 msgid "Subscribers"
 msgstr "Iscritti"
 
+msgid "No subscribers yet"
+msgstr "Non ci sono ancora abbonati"
+
 msgid "Test"
 msgstr "Test"
 
